[package]
name = "bumv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tempfile = "3.2"
walkdir = "2.3"
directories-next = "2.0"
rprompt = "2.0.2"
anyhow = "1.0.70"
ignore = "0.4.10"

[dev-dependencies]
tempfile = "3.2"
