[package]
name = "bumv"
version = "0.2.0"
edition = "2021"
description = "bumv (bulk move) lets you use your favorite editor to rename files"
homepage = "https://github.com/cbonitz/bumv"
repository = "https://github.com/cbonitz/bumv"
authors = ["Christoph Bonitz <ml.christophbonitz@gmail.com>"]
license = "MIT"
keywords = ["file", "utility", "rename"]
category = "command-line-utilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tempfile = "3.2"
walkdir = "2.3"
directories-next = "2.0"
rprompt = "2.0.2"
anyhow = "1.0.70"
ignore = "0.4.10"
petgraph = "0.6.3"


[dev-dependencies]
tempfile = "3.2"
